# minam

./: .gitignore  API_GENERATION_EXPLANATION.md  README.md  SIMPLE_API_CREATION_FLOW.md
apps/api/: .env.example  Cargo.toml  sample_trading_data.csv  start.bat  start.sh
apps/api/src/: main.rs  models.rs  routes.rs  state.rs
apps/web/: .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  test-api-key.tsx  test-upload.tsx  test-xlsx.tsx
apps/web/app/api/analyze-file/: route.ts
apps/web/app/api/excel-agent/: route.ts
apps/web/app/api/mock-api/: route.ts
apps/web/app/api/multi-file-agent/: route.ts
apps/web/app/api/test-openai/: route.ts
apps/web/app/components/: APIBuilder.tsx  APIPostCard.tsx  APITester.tsx  ConversationSandbox.tsx  CreatePostModal.tsx  CreatorProfile.tsx  ExcelAPITester.tsx  FeedLayout.tsx  FileManager.tsx  JamesDeanLogo.tsx  Logo.tsx  MultiFileUploader.tsx  Navbar.tsx  TrendingAPIs.tsx
apps/web/app/components/crypto/: CryptoAgentsWorkingPage.tsx  CryptoDatasetUploader.tsx  DirectoryScanner.tsx  RealTimeAPIDashboard.tsx  SampleAPIDisplay.tsx
apps/web/app/create/: page.tsx
apps/web/app/publish/: page.tsx
apps/web/app/services/: cryptoAgentService.ts  modelToggleAgent.ts  openaiService.ts  supabaseService.ts
apps/web/app/test/: page.tsx
apps/web/app/test-api/: page.tsx
apps/web/app/utils/: excelParser.ts
data/examples/: dataset_manifest.json  model_profile.json  provider.json
pipeline/examples/: pipeline.yaml
