[package]
name = "minam-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = "1"
anyhow = "1"
# New dependencies for file uploads and OpenAI
axum-extra = { version = "0.9", features = ["multipart"] }
reqwest = { version = "0.11", features = ["json"] }
mime = "0.3"
tempfile = "3"
csv = "1"
